Ported to MC 1.20.1